--- a/ExtraCredit/tex/ec.tex
+++ b/ExtraCredit/tex/ec.tex
@@ -45,7 +45,7 @@
   keywordstyle=\color{blue},       % keyword style
   language=Python,                 % the language of the code
   morekeywords={*,...},            % if you want to add more keywords to the set
-  numbers=left,                    % where to put the line-numbers; possible values are (none, left, right)
+  numbers=none,                    % where to put the line-numbers; possible values are (none, left, right)
   numbersep=5pt,                   % how far the line-numbers are from the code
   numberstyle=\tiny\color{mygray}, % the style that is used for the line-numbers
   rulecolor=\color{black},         % if not set, the frame-color may be changed on line-breaks within not-black text (e.g. comments (green here))
@@ -85,16 +85,14 @@ karasinski@gmail.com
 
 While God's use of dice may be disputed, humans have been using dice in games of chance for many thousands of years~\cite{history}. Dice insert a certain amount of randomness into games, and can lead to wonderfully unpredictable situations. Perhaps more importantly, and in spite of the randomness associated with them, dice are also excellent for bringing everyone to the same level. A king and a peasant have the same odds of rolling a six, and the die does not care who is more wealthy, talented, or desperate. Despite their use for thousands of years, humans are very bad at predicting the outcomes of dice throws. Luckily, while the result of any individual roll of the die may be random and unknown, a basic application of statistics can lead us to make more informed decisions about the likelihood of events.
 
-The only assumption going forward is that we are considering perfect dice. These perfect dice have the property of having an equal probability of landing on any particular face. According to standard die notation, die rolls are given in the form AdX. A and X are variables, separated by the letter ``d'', which stands for die or dice~\cite{dice_notation}. A six-sided die (1d6), for example, would then have a $1/6$ probability of resulting in a 1, 2, 3, 4, 5 or 6. Cheap dice purchased for gaming will not have this property, and will instead slightly favor different outcomes. For the purposes of the simulations here, you can assume that we have purchased \textit{very, very expensive} dice which behave perfectly.
+The only assumption going forward is that we are considering perfect dice. These perfect dice have the property of having an equal probability of landing on any particular face. According to standard die notation, die rolls are given in the form AdX. A and X are variables, separated by the letter ``d'', which stands for die or dice~\cite{dice_notation}. For example, 1d20 represents one twenty-sided die, and 2d10 represents two ten-sided die. A six-sided die (1d6), for example, would then have a $1/6$ probability of resulting in a 1, 2, 3, 4, 5 or 6. Cheap dice purchased for gaming will not have this property, and will instead slightly favor different outcomes. For the purposes of the simulations here, you can assume that we have purchased \textit{very, very expensive} dice which behave perfectly.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Instructions}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-The project should consist of a brief write-up introducing relevant theory behind each simulation problem, your simulation method, your results, and a summary of your conclusions. I'm looking for short papers ranging 5-8 pages in length. These papers should focus on the simulation methodology and results, with these sections making up the bulk of the paper.\\
-
 Create a function that will allow me to specify the number of dice I want to use per roll, the number of faces on each die (assume all dice used in a roll have the same number of faces), whether I will sum the scores of each die or will have a minimum value needed to count as a success per die, and whether I will include botches or not as an outcome for rolls.\\
 
-Example requirements:%
+\noindent Requirements:%
 \begin{enumerate}
 \itemsep-.25em
 \item Roll 1d20 and I just want to know the score.
@@ -103,29 +101,64 @@ Example requirements:%
 \item The same scenario as above, but now each 1 rolled detracts from the number of successes.
 \end{enumerate}
 
+In addition to the above requirements, the program should also be able to compute the following statistics:%
+\begin{enumerate}
+\itemsep-.25em
+\item Roll 1d6 1,000 times, frequency of each outcome?
+\item Roll 2d6 1,000 times, frequency of each outcome? Use the summed scores of each die as your outcome.
+\item Roll 6d10 1,000 times, frequency of each outcome? Treat a score of 6 or better as a success and scores less than 6 as nothing, the outcome is total number of successes (include the frequency of no successes).
+\item Same as (c) above except now scores of 1 count as a botch. Each botch is subtracted from each success. If there are more botches than success (i.e., -1 successes) then the overall outcome is a botch. Now depict the frequency of botching, and total number of successes (as before, include the frequency of no successes).
+
+\end{enumerate}
+
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Simulation Method}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-This simulation will make use of Python 3.5.0. The core idea behind the simulation is to generate pseudo-random numbers to simulate the throwing of many dice. From there, the rules given in the problem prompt can be applied to deduce the result of the throw.
+This simulation will make use of Python 3.5.0 and NumPy 1.10.1. The core idea behind the simulation is to generate pseudorandom numbers to simulate the throwing of many dice. From there, the rules given in the problem prompt can be applied to deduce the result of the simulated dice throw.
 
-The basic functionality behind the simulation is the \texttt{dice()} function. This function accepts three arguments, \texttt{A}, \texttt{X}, and an optional \texttt{n}, where \texttt{A} and \texttt{X} take on the same meaning as in standard dice notation, and n is the number of times to simulate the throw. Calling \texttt{dice(3, 6, n=2)}, for example, would return \texttt{array([[2, 2, 6], [5, 3, 4]])}. This array has 2 rows of 3 simulated 6-sided dice.
+The basic functionality behind the simulation is the \texttt{dice()} function. This function accepts three arguments, \texttt{A}, \texttt{X}, and an optional \texttt{n}, where \texttt{A} and \texttt{X} take on the same meaning as in standard dice notation, and n is the number of times to simulate the throw. Calling \texttt{dice(3, 6, n=2)}, for example, would return \texttt{array([[2, 2, 6], [5, 3, 4]])}. This array has 2 rows of 3 simulated 6-sided dice. The first row (representing the first throw) contains the values 2, 2, and 6, and the second row contains the values 5, 3, and 4.
 
-The \texttt{dice()} function is essentially a helper function, which calls Numpy's random integer function. Numpy uses the Mersenne twister sequence to generate random numbers. As these are psuedo-random numbers and not true random numbers, knowing the seed of the algorithm allows you to reproduce the results, and predict future events with 100\% accuracy.
+The \texttt{dice()} function is essentially a helper function, which calls NumPy's random integer function. NumPy uses the Mersenne twister sequence to generate pseudorandom numbers. As these are psuedorandom numbers and not true random numbers, knowing the seed of the algorithm allows you to reproduce the results, and predict future events with 100\% accuracy.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Results}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+The script for this project, \texttt{dice.py}, accomplishes all of the requirements set out in Instructions section. The first four requirements can be run via:
+
+\begin{lstlisting}
+throw('1d6')
+# 2
+throw('1d20')
+# 15
+throw('4d10', success_min=5)
+# 4
+throw('4d10', success_min=5, botching=True)
+# 1
+\end{lstlisting}
+
+The second set of four requirements can be run via:
+\begin{lstlisting}
+throw('1d6', n=1000, plot=True, stats=True)
+throw('2d6', n=1000, plot=True, stats=True)
+throw('6d10', n=1000, success_min=6, plot=True, stats=True)
+throw('6d6', n=1000, success_min=6, botching=True, plot=True, stats=True)
+\end{lstlisting}
+the results of which are shown below.
+
+\subsection{}
 a. Roll 1d6 1,000 times, frequency of each outcome?
-\begin{figure}%[h!]
+\begin{figure}[h!]
 \centering
 \includegraphics[width=3.25in]{1d6.pdf}
 \caption{Results from 1,000 1d6 rolls.}
 % \label{fig:on}
 \end{figure}
 
-\begin{table}%[h!]
+\begin{table}[h!]
 \begin{center}
 \begin{tabular}{*{3}{r}}
 \toprule
@@ -143,15 +176,16 @@ Value & Count & Frequency \\
 \caption{Results of 1,000 1d6 rolls}
 \end{table}
 
+\subsection{}
 b. Roll 2d6 1,000 times, frequency of each outcome? Use the summed scores of each die as your outcome.
-\begin{figure}%[h!]
+\begin{figure}[h!]
 \centering
 \includegraphics[width=3.25in]{2d6.pdf}
 \caption{Results of summed values from 1,000 2d6 rolls.}
 % \label{fig:on}
 \end{figure}
 
-\begin{table}%[h!]
+\begin{table}[h!]
 \begin{center}
 \begin{tabular}{*{3}{r}}
 \toprule
@@ -174,15 +208,16 @@ Value & Count & Frequency \\
 \caption{Results of summed values from 1,000 2d6 rolls.}
 \end{table}
 
+\subsection{}
 c. Roll 6d10 1,000 times, frequency of each outcome? Treat a score of 6 or better as a success and scores less than 6 as nothing, the outcome is total number of successes (include the frequency of no successes).
-\begin{figure}%[h!]
+\begin{figure}[h!]
 \centering
 \includegraphics[width=3.25in]{6d10>6.pdf}
 \caption{Results of succeses from 1,000 6d10 rolls, where scores of 6 or greater are considered successes.}
 % \label{fig:on}
 \end{figure}
 
-\begin{table}%[h!]
+\begin{table}[h!]
 \begin{center}
 \begin{tabular}{*{3}{r}}
 \toprule
@@ -201,15 +236,16 @@ Value & Count & Frequency \\
 \caption{Results of succeses from 1,000 6d10 rolls, where scores of 6 or greater are considered successes.}
 \end{table}
 
+\subsection{}
 d. Same as (c) above except now scores of 1 count as a botch. Each botch is subtracted from each success. If there are more botches than success (i.e., -1 successes) then the overall outcome is a botch. Now depict the frequency of botching, and total number of successes (as before, include the frequency of no successes).
-\begin{figure}%[h!]
+\begin{figure}[h!]
 \centering
 \includegraphics[width=3.25in]{6d10>6-botching.pdf}
 \caption{Results of succeses from 1,000 6d10 rolls, where scores of 6 or greater are considered successes, and scores of 1 are considered botches.}
 % \label{fig:on}
 \end{figure}
 
-\begin{table}%[h!]
+\begin{table}[h!]
 \begin{center}
 \begin{tabular}{*{3}{r}}
 \toprule
